<resources>
    <string name="app_name">Coupang Eats</string>

    <!-- Main Fragment No Login -->
    <string name="main_n_top">곧 찾아갈게요!</string>
    <string name="main_n_bottom">쿠팡이츠가 고객님이 계신 곳에 서비스를 준비\n중입니다. 다른 지역에서 둘러보시는건 어때요?</string>

    <!-- Main Fragment No Login -->
    <string name="main_it">이츠에만 있는 맛집</string>
    <string name="main_hot">인기 프렌차이즈</string>
    <string name="main_new">새로 들어왔어요!</string>
    <string name="main_pick">골라먹는 맛집</string>

    <!-- Cart -->
    <string name="cart_top">카트</string>
    <string name="cart_bottom">쿠팡은 통신판매중개자로서 통신판매의 당사자가 아니며, 판매가자\n등록한 상품 정보, 상품의 품질 및 거래에 대해서 일체의 책임을 지지\n않습니다. 회원은 주문 내용을 확인하였고, 결제에 동의합니다.</string>

    <!-- Main Fragment No Login -->
    <string name="menu_name">직화낙지볶음</string>
    <string name="menu_info">공기밥+국물+깻잎+청양고추+생마늘+쌈장+콩나물+쌈무+콘샐러드\n\n2인분: 공기밥 or 음료수 500ml 중 택1\n3인분: 공기밥 or 음료수 1.25L 중 택1\n4인분: 공기밥 or 음료수 1.25L 중 택1</string>
    <string name="menu_store">공기밥+국물+깻잎+청양고추+생마늘+\n쌈장+콩나물+쌈무+콘샐러드\n\n2인분: 공기밥 or 음료수 500ml 중 택1\n3인분: 공기밥 or 음료수 1.25L 중 택1\n4인분: 공기밥 or 음료수 1.25L 중 택1</string>
    <string name="menu_price">24,000</string>


    <!-- Bottom Sheet -->
    <string name="bottom_start">이츠 시작하기</string>
    <string name="bottom_top">지금 로그인하고</string>
    <string name="bottom_bottom_bold">무료배달과 기간 한정 쿠폰</string>
    <string name="bottom_bottom">혜택 놓치지 마세요.</string>
    <string name="bottom_social_login">쿠팡 앱으로 간편 로그인</string>
    <string name="bottom_email_login">쿠팡 아이디(이메일)로 로그인</string>

    <!-- Email Login -->
    <string name="enter_email">이메일</string>
    <string name="enter_pw">비밀번호</string>
    <string name="hint_email">쿠팡 아이디(이메일) 입력</string>
    <string name="hint_pw">비밀번호 입력</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="join">회원가입</string>

    <!-- Join -->
    <string name="join_text">회원가입</string>
    <string name="join_user">회원정보를 입력해주세요</string>
    <string name="join_service">쿠팡 서비스약관에 동의해주세요</string>

    <string name="join_email">아이디(이메일)</string>
    <string name="join_password">비밀번호</string>
    <string name="join_name">이름</string>
    <string name="join_phone">휴대폰 번호</string>

    <string name="join_all_agree">모두 동의합니다.</string>
    <string name="join_all_agree_text">동의에는 필수 및 선택 목적(광고성 정보 수신 포함)에 대한 동의가  포함되어 있으며, 선택 목적의 동의를 거부하시는 경우에도 서비스 이용이 가능합니다.</string>
    <string name="join_not_agree">필수 항목에 모두 동의해주세요</string>
    <string name="join_agree1">[필수] 만 14세 이상입니다</string>
    <string name="join_agree2">[필수] 쿠팡 이용약관 동의</string>
    <string name="join_agree3">[필수] 전자금융거래 이용약관 동의</string>
    <string name="join_agree4">[필수] 개인정보 수집 및 이용 동의</string>
    <string name="join_agree5">[필수] 개인정보 제3자 제공 동의</string>
    <string name="join_agree6">[선택] 마케팅 및 이벤트 목적의 개인정보 수집 및 이용동의</string>
    <string name="join_agree7">[선택] 광고성 정보 수신 동의</string>
    <string name="join_agree8">[선택] 이메일 수신 동의</string>
    <string name="join_agree9">[선택] SMS, MMS, 수신 동의</string>
    <string name="join_agree10">[선택] 웹, 푸시 수신 동의</string>

    <string name="join_btn">동의하고 가입하기</string>
    <string name="join_copyright">ⓒCoupang Corp. All rights reserved.</string>

    <!-- 프레그먼트 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_store">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>